# media_observer

./: .gitignore  CHANGELOG.md  ISSUES.md  README.md  install-git-hooks.sh  pyproject.toml  settings.toml
src/de_quoi_parle_le_monde/: __main__.py  article.py  embeddings.py  france_tv_info.py  http.py  http_client.py  internet_archive.py  le_monde.py  main.py  medias.py  similarity_index.py  similarity_search.py  snapshot_worker.py  snapshots.py  storage.py  web.py  worker.py
src/de_quoi_parle_le_monde/db/: connection.py  postgres.py  sqlite.py
src/de_quoi_parle_le_monde/medias/: __init__.py  bfmtv.py  cnews.py  france_tv_info.py  le_figaro.py  le_monde.py  le_parisien.py
src/de_quoi_parle_le_monde/workers/: embeddings.py  snapshot.py
src/media_observer/: __main__.py  article.py  embeddings.py  internet_archive.py  similarity_index.py  snapshots.py  storage.py  storage_abstraction.py  test.py  web.py  worker.py
src/media_observer/db/: postgres.py  sqlite.py
src/media_observer/medias/: __init__.py  bfmtv.py  cnews.py  france_tv_info.py  le_figaro.py  le_monde.py  le_parisien.py  tf1_info.py
static/: style.css
templates/: index.html  site_detail.html  site_main_article_detail.html  ui.html
templates/admin/: index.html
