[project]
name = "de_quoi_parle_le_monde"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jherve", email = "julien.jev.herve@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "requests-cache>=1.2.0",
    "beautifulsoup4>=4.12.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
