[project]
name = "de_quoi_parle_le_monde"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jherve", email = "julien.jev.herve@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "requests-cache>=1.2.0",
    "beautifulsoup4>=4.12.3",
    "attrs>=23.2.0",
    "cattrs>=23.2.3",
    "ruff>=0.2.2",
    "aiohttp>=3.9.3",
    "aiohttp-client-cache[all]>=0.11.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
