[project]
name = "de_quoi_parle_le_monde"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jherve", email = "julien.jev.herve@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "requests-cache>=1.2.0",
    "beautifulsoup4>=4.12.3",
    "attrs>=23.2.0",
    "cattrs>=23.2.3",
    "ruff>=0.2.2",
    "aiohttp>=3.9.3",
    "aiohttp-client-cache[all]>=0.11.0",
    "lxml>=5.1.0",
    "aiolimiter>=1.1.0",
    "yarl>=1.9.4",
    "loguru>=0.7.2",
    "hypercorn>=0.16.0",
    "fastapi>=0.110.1",
    "jinja2>=3.1.3",
    "sentencepiece>=0.2.0",
    "protobuf>=5.26.1",
    "dynaconf>=3.2.5",
    "packaging>=24.0",
    "asyncpg>=0.29.0",
    "annoy>=1.17.3",
    "numpy>=1.26.4",
    "babel>=2.15.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/de_quoi_parle_le_monde"]

[tool.rye.scripts]
web_server = {cmd = "hypercorn --bind '0.0.0.0:8000' de_quoi_parle_le_monde.web:app"}
snapshots = {call = "de_quoi_parle_le_monde.snapshots"}
embeddings = {call = "de_quoi_parle_le_monde.embeddings"}
similarity_index = {call = "de_quoi_parle_le_monde.similarity_index"}
